update view